Rename AppointmentPage1 to AppointmentPage